--- a/css/my css.css
+++ b/css/my css.css
@@ -1,7 +1,7 @@
 /*css*/
 
 body {
-	background: lightblue;
+	background: rgb(0, 189, 252);
 	font-family: 'Roboto', sans-serif;
   padding: 1% 5%; 
   /*margin: 10em auto;
