--- a/css/my.css
+++ b/css/my.css
@@ -1,6 +1,7 @@
 /*css*/
+
 body {
-	background: rgb(0, 189, 252);
+	background: rgb(9, 172, 226);
 	font-family: 'Roboto', sans-serif;
   padding: 1% 5%; 
   /*margin: 10em auto;
@@ -16,6 +17,7 @@ h1 {
   font-family: 'Roboto', sans-serif;
   font-size: 24;
   padding: 5px;
+  text-align:center
 
 }
 
