--- a/css/my.css
+++ b/css/my.css
@@ -1,7 +1,7 @@
 /*css*/
 
 body {
-	background: #6570ea;
+	background: #f6ff4e;
 	font-family: 'Roboto', sans-serif;
   padding: 1% 5%; 
   /*margin: 10em auto;
